Actualizada la migración con nuevas columnas incluidas, Se trabaja en la funcionalidad Proponer combinación
